--- a/NineIsBetterThanOne/plugin.yml
+++ b/NineIsBetterThanOne/plugin.yml
@@ -3,4 +3,5 @@ main: MCPH\NIBTO\Main
 author: [MinecrafterPH (fork), Gamecrafter, HellBublz (original)]
 version: INDEV
 api: 1.12.0
-permissions:
+description: Disables death by explosions.
+website: http://www.minecrafterph.tk
