--- a/BlockChanger/resources/config.yml
+++ b/BlockChanger/resources/config.yml
@@ -1,8 +1,25 @@
 ---
 # BlockChanger by MinecrafterPH
 
+# Ticks (20 by default)
+ticks: 20
+
 # Positions
-x: 123
-y: 123
-z: 123
+x1: 123
+x2:
+x3:
+x4:
+x5:
+
+y1: 123
+y2:
+y3:
+y4:
+y5:
+
+z1: 123
+z2:
+z3:
+z4:
+z5:
 ...
